--- a/src/boiler.css
+++ b/src/boiler.css
@@ -1,3 +1,5 @@
+@charset "utf-8";
+
 .bbox-sizing
 {
     box-sizing: border-box;
@@ -28,11 +30,11 @@ pre, textarea, button,
 p, h1, h2, h3, h4, h5, h6,
 figure, blockquote, fieldset, legend
 {
-    padding: 0;
     margin: 0;
 }
 
-li 
+ul, ol 
 {
-    list-style: none;
+    padding: 0;
+    list-style: "\200B";
 }
